Conexao com o banco e primeiras paginas criadas

--- a/30Code.csproj
+++ b/30Code.csproj
@@ -175,10 +175,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CadastrarsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Cadastrar.cs" />
+    <Compile Include="Models\Contexto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -320,10 +323,14 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Cadastrars\Create.cshtml" />
+    <Content Include="Views\Cadastrars\Delete.cshtml" />
+    <Content Include="Views\Cadastrars\Details.cshtml" />
+    <Content Include="Views\Cadastrars\Edit.cshtml" />
+    <Content Include="Views\Cadastrars\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
