--- a/bin/30Code.dll.config
+++ b/bin/30Code.dll.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="StringConexao" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;database=30Code;uid=root;pwd='1234'"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
