--- a/packages.config
+++ b/packages.config
@@ -22,8 +22,8 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="MySql.Data" version="8.0.21" targetFramework="net472" />
-  <package id="MySql.Data.EntityFramework" version="8.0.21" targetFramework="net472" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net472" />
+  <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
