--- a/bin/30Code.dll.config
+++ b/bin/30Code.dll.config
@@ -22,7 +22,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Usuarios/Acesso" timeout="2880" />
+      <forms loginUrl="~/Usuarios/Create" timeout="2880" />
     </authentication>
   </system.web>
   <runtime>
