--- a/30Code.csproj
+++ b/30Code.csproj
@@ -568,6 +568,7 @@
     <Content Include="Views\Usuario_has_curso\Details.cshtml" />
     <Content Include="Views\Usuario_has_curso\Edit.cshtml" />
     <Content Include="Views\Usuario_has_curso\Index.cshtml" />
+    <Content Include="Views\Cursoes\Cursos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
