Mudança de layout em algumas view e atualização da view Aula

--- a/30Code.csproj
+++ b/30Code.csproj
@@ -569,6 +569,7 @@
     <Content Include="Views\Usuario_has_curso\Edit.cshtml" />
     <Content Include="Views\Usuario_has_curso\Index.cshtml" />
     <Content Include="Views\Cursoes\Cursos.cshtml" />
+    <Content Include="Views\Cursoes\Aula.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
