Conteudo de Variavel.PDF

--- a/30Code.csproj
+++ b/30Code.csproj
@@ -393,6 +393,7 @@
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="ComoSerEFETIVOnoDiaAdia.pdf" />
+    <Content Include="Dia2.pdf" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
