Imagem de Usuario

--- a/30Code.csproj
+++ b/30Code.csproj
@@ -197,6 +197,7 @@
     <Content Include="assets\img\team\WhatsApp Image 2020-10-28 at 18.45.56.jpeg" />
     <Content Include="assets\img\team\WhatsApp Image 2020-10-28 at 18.46.17.jpeg" />
     <Content Include="assets\img\team\WhatsAppImage 2020-10-28at18.57.09.jpeg" />
+    <Content Include="assets\img\Usuarios\rossini.jpeg" />
     <Content Include="assets\js\main.js" />
     <Content Include="assets\vendor\animate.css\animate.compat.css" />
     <Content Include="assets\vendor\animate.css\animate.css" />
