--- a/30Code.csproj
+++ b/30Code.csproj
@@ -637,6 +637,7 @@
     <Content Include="Views\Usuarios\EsqueceuSenha.cshtml" />
     <Content Include="Views\Usuarios\Redefinir.cshtml" />
     <Content Include="Views\Usuario_has_curso\MeusCursos.cshtml" />
+    <Content Include="Views\Usuarios\SejaPremium.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
