--- a/packages.config
+++ b/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.5.3" targetFramework="net472" />
-  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
@@ -21,5 +21,6 @@
   <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
