--- a/Web.config
+++ b/Web.config
@@ -23,7 +23,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Usuarios/Create" timeout="2880" />
+      <forms loginUrl="~/Usuarios/Cadastrar" timeout="2880" />
     </authentication>
   </system.web>
 
